maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:-23: error: Unmatched closing brace '}' ignored here
	}
        ^ShortestPathMaze:-22: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^ShortestPathMaze:-18: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^ShortestPathMaze:53: error: illegal start of statement (no modifiers allowed here)
override def run() {
^